--- a/src/Components/MovieDetails/Movie.module.scss
+++ b/src/Components/MovieDetails/Movie.module.scss
@@ -31,20 +31,19 @@
         margin: 0 10px;
       }
     }
-    .book_btn{
-        margin: 20px 0;
-        max-width: 250px;
-        width: 100%;
-        padding: 5px;
-        font-size: 20px;
-        border-radius: 6px;
-        font-weight: 600;
-        background-color: #fff;
+    .book_btn {
+      margin: 20px 0;
+      max-width: 250px;
+      width: 100%;
+      padding: 5px;
+      font-size: 20px;
+      border-radius: 6px;
+      font-weight: 600;
+      background-color: #fff;
     }
   }
-
 }
-.total_seats{
+.total_seats {
   max-width: 100px;
   width: 100%;
   border-radius: 6px;
@@ -53,43 +52,44 @@
   text-align: center;
   background-color: red;
   color: #fff;
-  p{
+  p {
     font-size: 20px;
     text-align: center;
     font-weight: bold;
-    .user_booking{
+    .user_booking {
       padding: 3px;
       text-align: center;
     }
-    .total_booking{
+    .total_booking {
       width: 50%;
       background-color: gray;
       color: #fff;
       padding: 3px;
     }
-    .font_set{
+    .font_set {
       font-size: 10px;
     }
   }
 }
-.btn_group{
-  button{
-    max-width: 45px;
+.btn_group {
+  button {
+    max-width: 80px;
     width: 100%;
     margin-right: 10px;
     padding: 4px;
+    font-weight: 600;
     border-radius: 6px;
     border: 1px solid;
-    &:first-child{
+    &:first-child {
       background-color: #fff;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       background-color: #000;
       color: #fff;
     }
   }
 }
-.proceed_btn{
+.proceed_btn {
   max-width: 100%;
   width: 100%;
   margin: 10px 0;
@@ -97,8 +97,19 @@
   border-radius: 6px;
   background-color: #fff;
   font-weight: 600;
-  &:hover{
+  &:hover {
     background-color: #000;
     color: #fff;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .movie_details {
+    img{
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
+      height: 300px;
+    }
   }
 }
